--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="a1.jpg" width="100%"> 
 
             <div class="text">
-                <h1>Welcome to MCHARV TECHLABS PRIVATE LIMITED</h1>
+                <h1>WELCOME TO MCHARV TECHLABS PRIVATE LIMITED</h1>
 
                 
             </div>
